--- a/src/Vista/frmBoleto.form
+++ b/src/Vista/frmBoleto.form
@@ -378,13 +378,10 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtOrigen" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                      <Component id="txtGrupo" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                      <Component id="txtSocio" alignment="3" max="32767" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                  <Component id="txtOrigen" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="txtGrupo" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="txtSocio" alignment="3" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <Component id="btnBuscar" min="-2" pref="40" max="-2" attributes="0"/>
