--- a/src/Vista/frmBoleto.form
+++ b/src/Vista/frmBoleto.form
@@ -197,7 +197,7 @@
             <Property name="editable" type="boolean" value="false"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="Sucursal"/>
+                <TitledBorder title="Sucursal Socio"/>
               </Border>
             </Property>
           </Properties>
