--- a/src/Vista/frmEnvioPDF.form
+++ b/src/Vista/frmEnvioPDF.form
@@ -23,7 +23,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/Iconos/icon-home.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Volver a Inicio"/>
+                <Property name="text" type="java.lang.String" value="Cerrar"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
